# working_vacancies_hh.ru

./: REACME.MD  main.py  pyproject.toml
src/: api.py  hh_api.py  ison_saver.py  json_saver.py  json_saver_abstract.py  vacancy.py  vacancy_mixin.py
tests/: conftest.py  test_hh_api.py  test_json_saver.py  test_main.py  test_vacancy.py  test_vacancy_mixin.py
